cluster/kubernetes/apps/external/kromgo/ingress/kromgo-http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kromgo
  namespace: external
  annotations:
    gatus.home-operations.com/enabled: 'true'
    gatus.home-operations.com/endpoint: |
      url: 'https://kromgo.cjsolsen.com/badges/talos_version?format=shields'
spec:
  hostnames:
    - kromgo.cjsolsen.com
  parentRefs:
    - name: external-gateway
      namespace: network
      sectionName: kromgo
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kromgo
          port: 8080
